Fix various most annoying things: non-retina'd pictures of small enough size; galleries not aligning by width with single images in tablet/desktop; useless localizer logs; twitter link breaking mobile; single image margins

--- a/Fennica2/Client/style.css
+++ b/Fennica2/Client/style.css
@@ -178,7 +178,7 @@ ul > li {
 figure {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     position: relative;
     left: calc(-40vw + 50%);
     width: 80vw;
@@ -187,6 +187,8 @@ figure {
 figure img, #primary img {
     max-width: 100%;
     height: auto;
+    margin: auto;
+    display: block;
     box-sizing: border-box;
 }
 
@@ -294,6 +296,14 @@ img.twitter {
 
     hr {
         width: 150px;
+    }
+
+    a.twitter-link {
+        /* Twitter link easily breaks out in mobile */
+        width: 100%;
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
@@ -574,6 +584,25 @@ header.big img.twitter {
 }
 
 /* Gallery stuff */
+
+/* On tablet and desktop make galleries appear same width as single images by default */
+
+@media (min-width: 768px) {
+    .glider-contain {
+        position: relative;
+        width: calc(100vw - 40px);
+        left: -20px;
+    }
+
+}
+
+@media (min-width: 1056px) {
+    .glider-contain {
+        position: relative;
+        width: 1015px;
+        left: calc(50% - 507px);
+    }
+}
 
 .glider-image {
     position: relative;
